# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--1.0
#

2004-10-24 04:49:25 GMT	John Goerzen <jgoerzen@complete.org>	patch-117

    Summary:
      Fixed listenTCPAddr to take a queue length
    Revision:
      missingh--head--1.0--patch-117


    modified files:
     ChangeLog libsrc/MissingH/Network.hs
     libsrc/MissingH/Network/FTP/Client.hs


2004-10-24 04:38:15 GMT	John Goerzen <jgoerzen@complete.org>	patch-116

    Summary:
      FTP is WORKING
    Revision:
      missingh--head--1.0--patch-116


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Client.hs
     libsrc/MissingH/Network/FTP/Parser.hs


2004-10-24 03:42:55 GMT	John Goerzen <jgoerzen@complete.org>	patch-115

    Summary:
      Added transmission code
    Revision:
      missingh--head--1.0--patch-115


    modified files:
     ChangeLog libsrc/MissingH/Network.hs
     libsrc/MissingH/Network/FTP/Client.hs
     libsrc/MissingH/Network/FTP/Parser.hs


2004-10-24 02:55:47 GMT	John Goerzen <jgoerzen@complete.org>	patch-114

    Summary:
      Initial completeion of downloads
    Revision:
      missingh--head--1.0--patch-114


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Client.hs


2004-10-24 02:43:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-113

    Summary:
      Checkpointing
    Revision:
      missingh--head--1.0--patch-113


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Client.hs
     libsrc/MissingH/Network/FTP/Parser.hs


2004-10-24 01:37:22 GMT	John Goerzen <jgoerzen@complete.org>	patch-112

    Summary:
      Added some IO and network utilities
    Revision:
      missingh--head--1.0--patch-112


    modified files:
     ChangeLog libsrc/MissingH/IO.hs libsrc/MissingH/Network.hs


2004-10-23 22:54:00 GMT	John Goerzen <jgoerzen@complete.org>	patch-111

    Summary:
      Basic commands now work
    Revision:
      missingh--head--1.0--patch-111

