@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--1.0
 #
 
+2004-10-24 06:18:21 GMT	John Goerzen <jgoerzen@complete.org>	patch-118
+
+    Summary:
+      updated docs
+    Revision:
+      missingh--head--1.0--patch-118
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/Network/FTP/Client.hs
+
+
 2004-10-24 04:49:25 GMT	John Goerzen <jgoerzen@complete.org>	patch-117
 
     Summary:
